# test-SHIFT_CFT

./: .ctf_test.db  .dockerignore  .gitignore  README.md  dockerfile  pyproject.toml
cft_test/: .ctf_test.db  alembic.ini  main.py
cft_test/app/: api.py  crud.py  database.py  model.py  models.py  schemas.py
cft_test/app/auth/: auth_handler.py
cft_test/migration/: env.py
cft_test/migration/versions/: c30a22e15fe9_init.py
cft_test/tests/: persons.py  test_main.py
